# Lingwistyka-Obliczeniowa

./: .gitignore  README.md  pyproject.toml
lab1/: README.md  lab1.ipynb  pyproject.toml  test.txt
lab1/data/: dataset.py
lab1/modules/: benchmark.py  device.py  eval.py  inference.py  lstm.py  training.py  transformer.py
lab1/report/: report.tex
lab2/: lab2.ipynb
lab2/modules/: benchmark.py  dataset.py  device.py  eval.py  shift_labels.py  tokenizers.py  training.py  transformer.py
lab2/report/: report.tex
lab3/: lab3.ipynb
lab3/modules/: benchmark.py  eval.py  training.py  transformer.py  visualization.py
lab3/report/: report.tex
lab4/: lab4.ipynb
lab4/modules/: __init__.py  dataset.py  device.py  eval.py  experiment.py  memory.py  training.py  transformer.py
lab4/report/: report.tex
lab5/: __init__.py  eval_utils.py  lab5.ipynb  lab5_evaluation.ipynb  lab5_results.ipynb
lab5/annotations/: annotations_lab5_experiment_20260111_115522.csv
lab5/report/: report.tex
lab5/tasks/: 10_ethical_reasoning.json  1_instruction_following.json  2_logical_reasoning.json  3_creative_writing.json  4_code_generation.json  5_reading_comprehension.json  6_common_sense.json  7_language_understanding.json  8_factual_knowledge.json  9_math.json
lab6/: lab6.ipynb
lab6/checkpoints/: llm_results.json  llm_results_filtered.csv  llm_results_filtered.json  llm_summary.csv  sudoku_final.pt  training_logs.csv  training_logs.json  trm_eval.csv  trm_eval.json
lab6/report/: report.tex
