[project]
name = "comp_ling"
version = "0.1.0"
description = "Computational linguistics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "torch>=2.2.0",
    "transformers>=4.41.0",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "sentencepiece>=0.1.99",
    "scikit-learn>=1.7.2",
]
